# design_pattern

./: README.md
Observer/: CMakeLists.txt  Demo.cpp  README.md  arch.org
Observer/src/: Observer.h  ObserverA.cpp  ObserverA.h  ObserverB.cpp  ObserverB.h  target.cpp  target.h
abstract_factory/: CMakeLists.txt  Demo.cpp  README.md  arch.org
abstract_factory/src/: abstractFactory.h  baseB.h  classAa.h  classAb.cpp  classAb.h  classBa.cpp  classBa.h  classBb.cpp  classBb.h  factoryA.cpp  factoryA.h  factoryB.cpp  factoryB.h
factory/: CMakeLists.txt  Demo.cpp  README.md  arch.org
factory/src/: baseA.h  classAa.cpp  factory.cpp  factory.h
singleton/: CMakeLists.txt  Demo.cpp  README.md
singleton/src/: singleton.cpp  singleton.h
